// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wpp-legend renders component with label 1`] = `
<wpp-legend class="wpp-legend" label="test">
  <mock:shadow-root>
    <svg class="dot">
      <circle cx="6" cy="6" fill="var(--wpp-dataviz-color-cat-neutral-1)" r="5"></circle>
    </svg>
    <wpp-typography color="var(--wpp-grey-color-1000)" type="xs-body">
      test
    </wpp-typography>
  </mock:shadow-root>
</wpp-legend>
`;

exports[`wpp-legend renders component with label and custom color 1`] = `
<wpp-legend class="wpp-legend" color="var(--wpp-dataviz-color-cat-neutral-4)" label="test">
  <mock:shadow-root>
    <svg class="dot">
      <circle cx="6" cy="6" fill="var(--wpp-dataviz-color-cat-neutral-4)" r="5"></circle>
    </svg>
    <wpp-typography color="var(--wpp-grey-color-1000)" type="xs-body">
      test
    </wpp-typography>
  </mock:shadow-root>
</wpp-legend>
`;

exports[`wpp-legend renders component with out label 1`] = `
<wpp-legend class="wpp-legend">
  <mock:shadow-root>
    <svg class="dot">
      <circle cx="6" cy="6" fill="var(--wpp-dataviz-color-cat-neutral-1)" r="5"></circle>
    </svg>
  </mock:shadow-root>
</wpp-legend>
`;
